# hue-api

./: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.dev.txt  requirements.lib.txt  requirements.lock.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: code-lint.yml  codeql-analysis.yml  python-package.yml  python-publish.yml  python-test.yml
docs/: _headers  _redirects  api.md  api_bridge.md  changelog.md  cli.md  index.md  license.md  robots.txt  security.txt
docs/api/: light.md
docs/cli/: bridge.md  index.md  light.md
hue/: README.md  __init__.py  __main__.py  api.py  cli.py  colors.py
hue/api/: __init__.py  bridge.py  colors.py  http.py  light.py  light_group.py
hue/cli/: bridge.py  light.py  lights.py  main.py
scripts/: bumpversion.sh
tests/: test_api.py  test_cli.py  test_hue_api.py
tests/test_api/: test_bridge.py  test_http.py  test_light.py
tests/test_cli/: test_bridge.py  test_light.py  test_main.py
