[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hue"
dist-name = "hue-api"
author = "Nirantak Raghav"
author-email = "hey@nirantak.com"
description-file = "README.md"
home-page = "https://hue-api.nirantak.com"
keywords = "hue, lights, async, automation"
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
]
requires-python = "~=3.8"
requires = [
  "httpx ~=0.23.0",
  "typer[all] ~=0.6.1",
  "rich ~=12.5.1",
]

[tool.flit.scripts]
hue = "hue.cli:app"

[tool.flit.metadata.requires-extra]
doc = [
  "mkdocs ~=1.4.0",
  "mkdocs-material ~=8.5.3",
  "mkdocstrings[python-legacy] ~=0.19.0",
]
test = [
  "pytest ~=7.1.3",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-cov",
  "Faker",
]
dev = [
  "black",
  "coverage",
  "flake8",
  "pre-commit",
  "tox",
]

[tool.flit.metadata.urls]
Documentation = "https://hue-api.nirantak.com/"
Source = "https://github.com/nirantak/hue-api"
Changelog = "https://hue-api.nirantak.com/CHANGELOG/"

[tool.flit.sdist]
include = ["tests", "LICENSE", "README.md", "CHANGELOG.md"]
exclude = [".github"]

[tool.black]
line-length = 100
target_version = ['py310']

[tool.coverage.run]
branch = true
source = ["hue"]
omit = ["hue/__main__.py"]

[tool.coverage.report]
precision = 2
